01, finish ubuntu basic. 02, sync datastruct links to index page.

--- a/_drafts/2020-01-01-index.md
+++ b/_drafts/2020-01-01-index.md
@@ -8,96 +8,111 @@ date: 2100-01-01 00:02
 ---
 
 
-> 本文是目录索引
+> 本文是目录索引&nbsp;&nbsp;&nbsp;&nbsp; 
 
 > **目录**  
-> **1**. [Java](#anchor1)  
-> **2**. [数据结构和算法](#anchor2)  
-> **3**. [Android](#anchor3)  
-
+[第1部分 Linux](#anchor1)  
+[第2部分 Java](#anchor2)  
+[第3部分 数据结构和算法](#anchor3)  
 
 
 <a name="anchor1"></a>
-# 1. Java
+# 第1部分 Linux
 
-1.0 Java 工程  
-&nbsp;&nbsp;&nbsp;&nbsp; [(草稿)Java工程之Calculator][drafts_link_java_project_calculator01]  
-
-1.1 Java基础文章  
-&nbsp;&nbsp;&nbsp;&nbsp; [Java 随机数][link_java_basic_01]  
-
-
-1.2 Java集合系列文章  
-&nbsp;&nbsp;&nbsp;&nbsp; [Java 集合系列目录(Category)][link_java_collection_00]  
-&nbsp;&nbsp;&nbsp;&nbsp; [Java 集合系列01之 总体框架][link_java_collection_01]  
-&nbsp;&nbsp;&nbsp;&nbsp; [Java 集合系列02之 Collection架构][link_java_collection_02]  
-&nbsp;&nbsp;&nbsp;&nbsp; [Java 集合系列03之 ArrayList详细介绍(源码解析)和使用示例][link_java_collection_03]  
-&nbsp;&nbsp;&nbsp;&nbsp; [Java 集合系列04之 fail-fast总结(通过ArrayList来说明fail-fast的原理、解决办法)][link_java_collection_04]  
-&nbsp;&nbsp;&nbsp;&nbsp; [Java 集合系列05之 LinkedList详细介绍(源码解析)和使用示例][link_java_collection_05]  
-&nbsp;&nbsp;&nbsp;&nbsp; [Java 集合系列06之 Vector详细介绍(源码解析)和使用示例][link_java_collection_06]  
-&nbsp;&nbsp;&nbsp;&nbsp; [Java 集合系列07之 Stack详细介绍(源码解析)和使用示例][link_java_collection_07]  
-&nbsp;&nbsp;&nbsp;&nbsp; [Java 集合系列08之 List总结(LinkedList, ArrayList等使用场景和性能分析)][link_java_collection_08]  
-&nbsp;&nbsp;&nbsp;&nbsp; [Java 集合系列09之 Map架构][link_java_collection_09]  
-&nbsp;&nbsp;&nbsp;&nbsp; [Java 集合系列10之 HashMap详细介绍(源码解析)和使用示例][link_java_collection_10]  
-&nbsp;&nbsp;&nbsp;&nbsp; [Java 集合系列11之 Hashtable详细介绍(源码解析)和使用示例][link_java_collection_11]  
-&nbsp;&nbsp;&nbsp;&nbsp; [Java 集合系列12之 TreeMap详细介绍(源码解析)和使用示例][link_java_collection_12]  
-&nbsp;&nbsp;&nbsp;&nbsp; [Java 集合系列13之 WeakHashMap详细介绍(源码解析)和使用示例][link_java_collection_13]  
-&nbsp;&nbsp;&nbsp;&nbsp; [Java 集合系列14之 Map总结(HashMap, Hashtable, TreeMap, WeakHashMap等使用场景)][link_java_collection_14]  
-&nbsp;&nbsp;&nbsp;&nbsp; [Java 集合系列15之 Set架构][link_java_collection_15]  
-&nbsp;&nbsp;&nbsp;&nbsp; [Java 集合系列16之 HashSet详细介绍(源码解析)和使用示例][link_java_collection_16]  
-&nbsp;&nbsp;&nbsp;&nbsp; [Java 集合系列17之 TreeSet详细介绍(源码解析)和使用示例][link_java_collection_17]  
-&nbsp;&nbsp;&nbsp;&nbsp; [Java 集合系列18之 Iterator和Enumeration比较][link_java_collection_18]    
-&nbsp;&nbsp;&nbsp;&nbsp; [Java 集合系列扩展(一) Comparable和Comparator比较][link_java_collection_19]  
-&nbsp;&nbsp;&nbsp;&nbsp; [Java 集合系列扩展(二) hashCode()和equals()的若干问题解答][link_java_collection_20]
-
-1.3 Java 时间相关内容  
-&nbsp;&nbsp;&nbsp;&nbsp; [Java 时间相关内容的目录(Category)][link_java_time_00]  
-&nbsp;&nbsp;&nbsp;&nbsp; [Java 时间相关内容01 Calendar][link_java_time_01]  
-&nbsp;&nbsp;&nbsp;&nbsp; [Java 时间相关内容02 万年历和自定义Calendar接口][link_java_time_02]  
-&nbsp;&nbsp;&nbsp;&nbsp; [Java 时间相关内容03 Date][link_java_time_03]  
-&nbsp;&nbsp;&nbsp;&nbsp; [Java 时间相关内容04 DateFormat][link_java_time_04]  
-&nbsp;&nbsp;&nbsp;&nbsp; [Java 时间相关内容05 SimpleDateFormat][link_java_time_05]  
-&nbsp;&nbsp;&nbsp;&nbsp; [Java 时间相关内容06 Locale][link_java_time_06]  
-&nbsp;&nbsp;&nbsp;&nbsp; [Java 时间相关内容07 Time][link_java_time_07]
-
-1.4 Java 字符串系列  
-&nbsp;&nbsp;&nbsp;&nbsp; [Java 字符串系列01 String详解, String和CharSequence区别, StringBuilder和StringBuffer的区别][link_java_charsequence_01]  
-&nbsp;&nbsp;&nbsp;&nbsp; [Java 字符串系列02 StringBuilder详解][link_java_charsequence_02]  
-&nbsp;&nbsp;&nbsp;&nbsp; [Java 字符串系列03 StringBuffer详解][link_java_charsequence_03]  
-
-1.5 Java io系列  
-
-&nbsp;&nbsp;&nbsp;&nbsp; [java io系列01之 IO框架][link_java_io_01]  
-&nbsp;&nbsp;&nbsp;&nbsp; [java io系列02之 ByteArrayInputStream详解][link_java_io_02]  
-&nbsp;&nbsp;&nbsp;&nbsp; [java io系列03之 ByteArrayOutputStream详解][link_java_io_03]  
-&nbsp;&nbsp;&nbsp;&nbsp; [java io系列04之 管道(PipedOutputStream和PipedInputStream)详解][link_java_io_04]  
-&nbsp;&nbsp;&nbsp;&nbsp; [java io系列05之 ObjectInputStream和ObjectOutputStream详解][link_java_io_05]  
-&nbsp;&nbsp;&nbsp;&nbsp; [java io系列06之 序列化(Serializable和Externalizable)详解][link_java_io_06]  
-&nbsp;&nbsp;&nbsp;&nbsp; [java io系列07之 FileInputStream和FileOutputStream详解][link_java_io_07]  
-&nbsp;&nbsp;&nbsp;&nbsp; [java io系列08之 File详解][link_java_io_08]  
-&nbsp;&nbsp;&nbsp;&nbsp; [java io系列09之 FileDescriptor详解][link_java_io_09]  
-&nbsp;&nbsp;&nbsp;&nbsp; [java io系列10之 FilterInputStream详解][link_java_io_10]  
-&nbsp;&nbsp;&nbsp;&nbsp; [java io系列11之 FilterOutputStream详解][link_java_io_11]  
-&nbsp;&nbsp;&nbsp;&nbsp; [java io系列12之 BufferedInputStream详解][link_java_io_12]  
-&nbsp;&nbsp;&nbsp;&nbsp; [java io系列13之 BufferedOutputStream详解][link_java_io_13]  
-&nbsp;&nbsp;&nbsp;&nbsp; [java io系列14之 DataInputStream详解][link_java_io_14]  
-&nbsp;&nbsp;&nbsp;&nbsp; [java io系列15之 DataOutputStream详解][link_java_io_15]  
-&nbsp;&nbsp;&nbsp;&nbsp; [java io系列16之 PrintStream详解][link_java_io_16]  
-&nbsp;&nbsp;&nbsp;&nbsp; [java io系列17之 System.out.println详解][link_java_io_17]  
-&nbsp;&nbsp;&nbsp;&nbsp; [java io系列18之 CharArrayReader详解][link_java_io_18]  
-&nbsp;&nbsp;&nbsp;&nbsp; [java io系列19之 CharArrayWriter详解][link_java_io_19]  
-&nbsp;&nbsp;&nbsp;&nbsp; [java io系列20之 PipedReader和PipedWriter详解][link_java_io_20]  
-&nbsp;&nbsp;&nbsp;&nbsp; [java io系列21之 InputStreamReader和OutputStreamWriter详解][link_java_io_21]  
-&nbsp;&nbsp;&nbsp;&nbsp; [java io系列22之 FileReader和FileWriter详解][link_java_io_22]  
-&nbsp;&nbsp;&nbsp;&nbsp; [java io系列23之 BufferedReader详解][link_java_io_23]  
-&nbsp;&nbsp;&nbsp;&nbsp; [java io系列24之 BufferedWriter详解][link_java_io_24]  
-&nbsp;&nbsp;&nbsp;&nbsp; [java io系列25之 PrintWriter详解][link_java_io_25]  
-&nbsp;&nbsp;&nbsp;&nbsp; [java io系列26之 RandomAccessFile详解][link_java_io_26]
-
+[Linux学习基础篇01 双系统中ubuntu的安装方法][link_linux_ubuntu01]  
+[Linux学习基础篇02 ubuntu的配置(一) 启用root登录界面][link_linux_ubuntu_cfg01]  
+[Linux学习基础篇02 ubuntu的配置(二) 设置默认开机选项][link_linux_ubuntu_cfg02]  
+[Linux学习基础篇02 ubuntu的配置(三) 开机自动挂载磁盘分区][link_linux_ubuntu_cfg03]  
+[Linux学习基础篇02 ubuntu的配置(四) 终端快捷键和常用配置][link_linux_ubuntu_cfg04]  
+[Linux学习基础篇02 ubuntu的配置(五) 工作区和自定义快捷键][link_linux_ubuntu_cfg05]  
+[Linux学习基础篇03 ubuntu软件(一) 必备软件][link_linux_ubuntu_sw01]  
+[Linux学习基础篇03 ubuntu软件(二) JDK][link_linux_ubuntu_sw02]  
+[Linux学习基础篇03 ubuntu软件(三) 串口工具minicom][link_linux_ubuntu_sw03]  
+[Linux学习基础篇03 ubuntu指令和技巧(一) 常用指令汇总][link_linux_ubuntu_cmd01]  
+[Linux学习基础篇03 ubuntu指令和技巧(二) 网络相关的指令][link_linux_ubuntu_cmd02]  
+[Linux学习基础篇03 ubuntu指令和技巧(三) 内容查看和文件查找][link_linux_ubuntu_cmd03]  
+[Linux学习基础篇03 ubuntu指令和技巧(四) 文件的权限][link_linux_ubuntu_cmd04]  
+[Linux学习基础篇03 ubuntu指令和技巧(五) 用户和用户组的相关操作][link_linux_ubuntu_cmd05]  
+[Linux学习基础篇03 ubuntu指令和技巧(六) 压缩和解压][link_linux_ubuntu_cmd06]  
+[Linux学习基础篇03 ubuntu指令和技巧(七) 挂载,卸载,重新分区和格式化][link_linux_ubuntu_cmd07]  
+[Linux学习基础篇03 ubuntu指令和技巧(八) Jar包][link_linux_ubuntu_cmd08]  
 
 
 <a name="anchor2"></a>
-# 2. 数据结构和算法(64篇)
+# 第2部分 Java
+
+[(草稿)Java工程之Calculator][drafts_link_java_project_calculator01]  
+
+[Java 随机数][link_java_basic_01]  
+
+[Java 字符串系列01 String详解, String和CharSequence区别, StringBuilder和StringBuffer的区别][link_java_charsequence_01]  
+[Java 字符串系列02 StringBuilder详解][link_java_charsequence_02]  
+[Java 字符串系列03 StringBuffer详解][link_java_charsequence_03]  
+
+[Java 时间相关内容的目录(Category)][link_java_time_00]  
+[Java 时间相关内容01 Calendar][link_java_time_01]  
+[Java 时间相关内容02 万年历和自定义Calendar接口][link_java_time_02]  
+[Java 时间相关内容03 Date][link_java_time_03]  
+[Java 时间相关内容04 DateFormat][link_java_time_04]  
+[Java 时间相关内容05 SimpleDateFormat][link_java_time_05]  
+[Java 时间相关内容06 Locale][link_java_time_06]  
+[Java 时间相关内容07 Time][link_java_time_07]
+
+
+[Java 集合系列目录(Category)][link_java_collection_00]  
+[Java 集合系列01之 总体框架][link_java_collection_01]  
+[Java 集合系列02之 Collection架构][link_java_collection_02]  
+[Java 集合系列03之 ArrayList详细介绍(源码解析)和使用示例][link_java_collection_03]  
+[Java 集合系列04之 fail-fast总结(通过ArrayList来说明fail-fast的原理、解决办法)][link_java_collection_04]  
+[Java 集合系列05之 LinkedList详细介绍(源码解析)和使用示例][link_java_collection_05]  
+[Java 集合系列06之 Vector详细介绍(源码解析)和使用示例][link_java_collection_06]  
+[Java 集合系列07之 Stack详细介绍(源码解析)和使用示例][link_java_collection_07]  
+[Java 集合系列08之 List总结(LinkedList, ArrayList等使用场景和性能分析)][link_java_collection_08]  
+[Java 集合系列09之 Map架构][link_java_collection_09]  
+[Java 集合系列10之 HashMap详细介绍(源码解析)和使用示例][link_java_collection_10]  
+[Java 集合系列11之 Hashtable详细介绍(源码解析)和使用示例][link_java_collection_11]  
+[Java 集合系列12之 TreeMap详细介绍(源码解析)和使用示例][link_java_collection_12]  
+[Java 集合系列13之 WeakHashMap详细介绍(源码解析)和使用示例][link_java_collection_13]  
+[Java 集合系列14之 Map总结(HashMap, Hashtable, TreeMap, WeakHashMap等使用场景)][link_java_collection_14]  
+[Java 集合系列15之 Set架构][link_java_collection_15]  
+[Java 集合系列16之 HashSet详细介绍(源码解析)和使用示例][link_java_collection_16]  
+[Java 集合系列17之 TreeSet详细介绍(源码解析)和使用示例][link_java_collection_17]  
+[Java 集合系列18之 Iterator和Enumeration比较][link_java_collection_18]    
+[Java 集合系列扩展(一) Comparable和Comparator比较][link_java_collection_19]  
+[Java 集合系列扩展(二) hashCode()和equals()的若干问题解答][link_java_collection_20]
+
+
+[java io系列01之 IO框架][link_java_io_01]  
+[java io系列02之 ByteArrayInputStream详解][link_java_io_02]  
+[java io系列03之 ByteArrayOutputStream详解][link_java_io_03]  
+[java io系列04之 管道(PipedOutputStream和PipedInputStream)详解][link_java_io_04]  
+[java io系列05之 ObjectInputStream和ObjectOutputStream详解][link_java_io_05]  
+[java io系列06之 序列化(Serializable和Externalizable)详解][link_java_io_06]  
+[java io系列07之 FileInputStream和FileOutputStream详解][link_java_io_07]  
+[java io系列08之 File详解][link_java_io_08]  
+[java io系列09之 FileDescriptor详解][link_java_io_09]  
+[java io系列10之 FilterInputStream详解][link_java_io_10]  
+[java io系列11之 FilterOutputStream详解][link_java_io_11]  
+[java io系列12之 BufferedInputStream详解][link_java_io_12]  
+[java io系列13之 BufferedOutputStream详解][link_java_io_13]  
+[java io系列14之 DataInputStream详解][link_java_io_14]  
+[java io系列15之 DataOutputStream详解][link_java_io_15]  
+[java io系列16之 PrintStream详解][link_java_io_16]  
+[java io系列17之 System.out.println详解][link_java_io_17]  
+[java io系列18之 CharArrayReader详解][link_java_io_18]  
+[java io系列19之 CharArrayWriter详解][link_java_io_19]  
+[java io系列20之 PipedReader和PipedWriter详解][link_java_io_20]  
+[java io系列21之 InputStreamReader和OutputStreamWriter详解][link_java_io_21]  
+[java io系列22之 FileReader和FileWriter详解][link_java_io_22]  
+[java io系列23之 BufferedReader详解][link_java_io_23]  
+[java io系列24之 BufferedWriter详解][link_java_io_24]  
+[java io系列25之 PrintWriter详解][link_java_io_25]  
+[java io系列26之 RandomAccessFile详解][link_java_io_26]
+
+
+
+<a name="anchor3"></a>
+# 第3部分 数据结构和算法
 
 [数据结构和算法 目录][link_ds_index] 
 
@@ -109,19 +124,20 @@ date: 2100-01-01 00:02
 |              | [队列][link_ds_linear_list] | [队列][link_ds_linear_list] | [队列][link_ds_linear_list] |
 |              |  |  |  |
 | **树性结构** | [二叉查找树][link_ds_tree_bstree_c] | [二叉查找树][link_ds_tree_bstree_cpp] | [二叉查找树][link_ds_tree_bstree_java] |
-|              | AVL树 | AVL树 | AVL树 |
-|              | 伸展树 | 伸展树 | 伸展树 |
-|              | 1. 红黑树(一)之 原理和算法详细介绍 | 1. 红黑树(一)之 原理和算法详细介绍 | 1. 红黑树(一)之 原理和算法详细介绍 |
-|              | 2. 红黑树(二)之 C语言的实现 | 2. 红黑树(二)之 C语言的实现 | 2. 红黑树(二)之 C语言的实现 |
-|              | 3. 红黑树(三)之 Linux内核中红黑树的经典实现 | 3. 红黑树(三)之 Linux内核中红黑树的经典实现 | 3. 红黑树(三)之 Linux内核中红黑树的经典实现 |
-|              | 4. 红黑树(六)之 参考资料 |  |  |
+|              | [AVL树][link_ds_tree_avltree_c] | [AVL树][link_ds_tree_avltree_cpp] | [AVL树][link_ds_tree_avltree_java] |
+|              | [伸展树][link_ds_tree_splaytree_c] | [伸展树][link_ds_tree_splaytree_cpp] | [伸展树][link_ds_tree_splaytree_java] |
+|              | [哈夫曼树][link_ds_tree_huffman_c] | [哈夫曼树][link_ds_tree_huffman_cpp] | [哈夫曼树][link_ds_tree_huffman_java] |
+|              | [1. 红黑树(一)之 原理和算法详细介绍][link_ds_tree_rbtree01] | [1. 红黑树(一)之 原理和算法详细介绍][link_ds_tree_rbtree01] | [1. 红黑树(一)之 原理和算法详细介绍][link_ds_tree_rbtree01] |
+|              | [2. 红黑树(二)之 C语言的实现][link_ds_tree_rbtree02] | [2. 红黑树(四)之 C++的实现][link_ds_tree_rbtree04] | [2. 红黑树(五)之 Java的实现][link_ds_tree_rbtree05] |
+|              | [3. 红黑树(三)之 Linux内核中红黑树的经典实现][link_ds_tree_rbtree03] | [3. 红黑树(六)之 参考资料][link_ds_tree_rbtree06] | [3. 红黑树(六)之 参考资料][link_ds_tree_rbtree06] |
+|              | [4. 红黑树(六)之 参考资料][link_ds_tree_rbtree06] |  |  |
 |              | [哈夫曼树][link_ds_tree_huffman_c] | [哈夫曼树][link_ds_tree_huffman_cpp] | [哈夫曼树][link_ds_tree_huffman_java] |
 |              |  |  |  |
 | **堆**       | [二叉堆][link_ds_heap_binary_c] | [二叉堆][link_ds_heap_binary_cpp] | [二叉堆][link_ds_heap_binary_java] |
 |              | [左倾堆][link_ds_heap_leftist_c] | [左倾堆][link_ds_heap_leftist_cpp] | [左倾堆][link_ds_heap_leftist_java] |
 |              | [斜堆][link_ds_heap_skewheap_c] | [斜堆][link_ds_heap_skewheap_cpp] | [斜堆][link_ds_heap_skewheap_java] |
-|              | 二项堆 | 二项堆 | 二项堆 |
-|              | 斐波那契堆 | 斐波那契堆 | 斐波那契堆 |
+|              | [二项堆][link_ds_heap_binomial_c] | [二项堆][link_ds_heap_binomial_cpp] | [二项堆][link_ds_heap_binomial_java] |
+|              | [斐波那契堆][link_ds_heap_fabonacci_c] | [斐波那契堆][link_ds_heap_fabonacci_cpp] | [斐波那契堆][link_ds_heap_fabonacci_java] |
 |              |  |  |  |
 | **图**       | [图的理论基础][link_ds_graph_thesis] | [图的理论基础][link_ds_graph_thesis] | [图的理论基础][link_ds_graph_thesis] |
 |              | [1. 邻接矩阵无向图][link_ds_graph_matrix_udg_c] | [1. 邻接矩阵无向图][link_ds_graph_matrix_udg_cpp] | [1. 邻接矩阵无向图][link_ds_graph_matrix_udg_java] |
@@ -145,6 +161,25 @@ date: 2100-01-01 00:02
 |              | [基数排序][link_algrithm_radix-sort] | [基数排序][link_algrithm_radix-sort] | [基数排序][link_algrithm_radix-sort] |
 
 
+
+<!-- Linux 链接 -->
+[link_linux_ubuntu01]: /2011/07/01/ubuntu-01-install
+[link_linux_ubuntu_cfg01]: /2011/07/02/ubuntu-01-setup
+[link_linux_ubuntu_cfg02]: /2011/07/02/ubuntu-02-setup
+[link_linux_ubuntu_cfg03]: /2011/07/02/ubuntu-03-setup
+[link_linux_ubuntu_cfg04]: /2011/07/02/ubuntu-04-setup
+[link_linux_ubuntu_cfg05]: /2011/07/02/ubuntu-05-setup
+[link_linux_ubuntu_sw01]:  /2011/07/03/ubuntu-01-software
+[link_linux_ubuntu_sw02]:  /2011/07/03/ubuntu-02-software
+[link_linux_ubuntu_sw03]:  /2011/07/03/ubuntu-03-software
+[link_linux_ubuntu_cmd01]: /2011/07/04/ubuntu-01-cmd
+[link_linux_ubuntu_cmd02]: /2011/07/04/ubuntu-02-cmd
+[link_linux_ubuntu_cmd03]: /2011/07/04/ubuntu-03-cmd
+[link_linux_ubuntu_cmd04]: /2011/07/04/ubuntu-04-cmd
+[link_linux_ubuntu_cmd05]: /2011/07/04/ubuntu-05-cmd
+[link_linux_ubuntu_cmd06]: /2011/07/04/ubuntu-06-cmd
+[link_linux_ubuntu_cmd07]: /2011/07/04/ubuntu-07-cmd
+[link_linux_ubuntu_cmd08]: /2011/07/04/ubuntu-08-cmd
 
 
 
@@ -231,9 +266,21 @@ date: 2100-01-01 00:02
 [link_ds_tree_bstree_c]:     /2013/02/01/bstree-c
 [link_ds_tree_bstree_cpp]:   /2013/02/01/bstree-cpp
 [link_ds_tree_bstree_java]:  /2013/02/01/bstree-java
-[link_ds_tree_huffman_c]:    /2013/02/04/huffman-c
-[link_ds_tree_huffman_cpp]:  /2013/02/04/huffman-cpp
-[link_ds_tree_huffman_java]: /2013/02/04/huffman-java
+[link_ds_tree_avltree_c]:       /2013/02/02/avltree-c
+[link_ds_tree_avltree_cpp]:     /2013/02/02/avltree-cpp
+[link_ds_tree_avltree_java]:    /2013/02/02/avltree-java
+[link_ds_tree_splaytree_c]:     /2013/02/03/splaytree-c
+[link_ds_tree_splaytree_cpp]:   /2013/02/03/splaytree-cpp
+[link_ds_tree_splaytree_java]:  /2013/02/03/splaytree-java
+[link_ds_tree_huffman_c]:       /2013/02/04/huffman-c
+[link_ds_tree_huffman_cpp]:     /2013/02/04/huffman-cpp
+[link_ds_tree_huffman_java]:    /2013/02/04/huffman-java
+[link_ds_tree_rbtree01]:        /2013/02/05/rbtree01
+[link_ds_tree_rbtree02]:        /2013/02/05/rbtree02
+[link_ds_tree_rbtree03]:        /2013/02/05/rbtree03
+[link_ds_tree_rbtree04]:        /2013/02/05/rbtree04
+[link_ds_tree_rbtree05]:        /2013/02/05/rbtree05
+[link_ds_tree_rbtree06]:        /2013/02/05/rbtree06
 
 [link_ds_heap_binary_c]:      /2013/03/01/binary-heap-c
 [link_ds_heap_binary_cpp]:    /2013/03/01/binary-heap-cplus
@@ -244,6 +291,12 @@ date: 2100-01-01 00:02
 [link_ds_heap_skewheap_c]:    /2013/03/03/skewheap-c
 [link_ds_heap_skewheap_cpp]:  /2013/03/03/skewheap-cplus
 [link_ds_heap_skewheap_java]: /2013/03/03/skewheap-java
+[link_ds_heap_binomial_c]:      /2013/03/04/binomial-c
+[link_ds_heap_binomial_cpp]:    /2013/03/04/binomial-cpp
+[link_ds_heap_binomial_java]:   /2013/03/04/binomial-java
+[link_ds_heap_fabonacci_c]:     /2013/03/05/fabonacci-c
+[link_ds_heap_fabonacci_cpp]:   /2013/03/05/fabonacci-cpp
+[link_ds_heap_fabonacci_java]:  /2013/03/05/fabonacci-java
 
 [link_ds_graph_thesis]:          /2013/04/05/graph-thesis
 [link_ds_graph_matrix_udg_c]:    /2013/04/06/basic-matrix-udg-c
