--- a/_posts/linux/ubuntu/2011-07-04-ubuntu-04-cmd.md
+++ b/_posts/linux/ubuntu/2011-07-04-ubuntu-04-cmd.md
@@ -8,32 +8,33 @@ date: 2011-07-04 09:04
 ---
 
 
+# 1. 文件的普通属性
 
-文件的权限 - 使用 "+" 设置权限，使用 "-" 用于取消 
-ls -lh 显示权限 
-ls /tmp | pr -T5 -W$COLUMNS 将终端划分成5栏显示 
-chmod ugo+rwx directory1 设置目录的所有人(u)、群组(g)以及其他人(o)以读（r ）、写(w)和执行(x)的权限 
-chmod go-rwx directory1 删除群组(g)与其他人(o)对目录的读写执行权限 
-chown user1 file1 改变一个文件的所有人属性 
-chown -R user1 directory1 改变一个目录的所有人属性并同时改变改目录下所有文件的属性 
-chgrp group1 file1 改变文件的群组 
-chown user1:group1 file1 改变一个文件的所有人和群组属性 
-find / -perm -u+s 罗列一个系统中所有使用了SUID控制的文件 
-chmod u+s /bin/file1 设置一个二进制文件的 SUID 位 - 运行该文件的用户也被赋予和所有者同样的权限 
-chmod u-s /bin/file1 禁用一个二进制文件的 SUID位 
-chmod g+s /home/public 设置一个目录的SGID 位 - 类似SUID ，不过这是针对目录的 
-chmod g-s /home/public 禁用一个目录的 SGID 位 
-chmod o+t /home/public 设置一个文件的 STIKY 位 - 只允许合法所有人删除文件 
-chmod o-t /home/public 禁用一个目录的 STIKY 位 
 
-返回顶部索引 ^
+|                指令              |                   说明                  |
+| -------------------------------- | --------------------------------------- |
+| ls -alh | 显示当前目录下，全部文件的详细信息 |
+| chmod ugo+rwx dir | 设置目录dir的"拥有者权限(u)、用户组权限(g) 、其他人权限(o)"均为可读(r)、可写(w)和可执行(x)权限 |
+| chmod 777 dir | 设置目录dir的"拥有者权限(u)、用户组权限(g) 、其他人权限(o)"均为可读(r)、可写(w)和可执行(x)权限 |
+| chmod go-rwx dir | 去掉目录dir的"用户组与其他人"的读、写和执行权限  |
+| chmod 700 dir | 设置dir的"拥有者"为读、写、执行权限，而"用户组与其他人"的则没有读、写或执行权限  |
+| chown skywang file | 将文件file的拥有者改为skywang |
+| chown -R skywang dir | 将dir目录和其子目录的拥有者均改为skywang |
+| chgrp adm file | 将文件file的用户组改为adm |
+| chown skywang:adm file | 将文件file的拥有者改为skywang，用户组改为adm |
 
-文件的特殊属性 - 使用 "+" 设置权限，使用 "-" 用于取消 
-chattr +a file1 只允许以追加方式读写文件 
-chattr +c file1 允许这个文件能被内核自动压缩/解压 
-chattr +d file1 在进行文件系统备份时，dump程序将忽略这个文件 
-chattr +i file1 设置成不可变的文件，不能被删除、修改、重命名或者链接 
-chattr +s file1 允许一个文件被安全地删除 
-chattr +S file1 一旦应用程序对这个文件执行了写操作，使系统立刻把修改的结果写到磁盘 
-chattr +u file1 若文件被删除，系统会允许你在以后恢复这个被删除的文件 
-lsattr 显示特殊的属性 
+
+
+# 2. 文件的特殊属性
+
+|                指令              |                   说明                  |
+| -------------------------------- | --------------------------------------- |
+| lsattr | 显示特殊的属性 |
+| chattr +a file | 只允许以追加方式读写文件  |
+| chattr +c file | 允许这个文件能被内核自动压缩/解压  |
+| chattr +d file | 在进行文件系统备份时，dump程序将忽略这个文件  |
+| chattr +i file | 设置成不可变的文件，不能被删除、修改、重命名或者链接  |
+| chattr +s file | 允许一个文件被安全地删除  |
+| chattr +S file | 一旦应用程序对这个文件执行了写操作，使系统立刻把修改的结果写到磁盘  |
+| chattr +u file | 若文件被删除，系统会允许你在以后恢复这个被删除的文件  |
+
