--- a/_posts/linux/ubuntu/2011-07-04-ubuntu-05-cmd.md
+++ b/_posts/linux/ubuntu/2011-07-04-ubuntu-05-cmd.md
@@ -7,16 +7,14 @@ tags: [linux]
 date: 2011-07-04 09:05
 ---
 
-groupadd group_name 创建一个新用户组 
-groupdel group_name 删除一个用户组 
-groupmod -n new_group_name old_group_name 重命名一个用户组 
-useradd -c "Name Surname " -g admin -d /home/user1 -s /bin/bash user1 创建一个属于 "admin" 用户组的用户 
-useradd user1 创建一个新用户 
-userdel -r user1 删除一个用户 ( '-r' 排除主目录) 
-usermod -c "User FTP" -g system -d /ftp/user1 -s /bin/nologin user1 修改用户属性 
-passwd 修改口令 
-passwd user1 修改一个用户的口令 (只允许root执行) 
-chage -E 2005-12-31 user1 设置用户口令的失效期限 
-pwck 检查 '/etc/passwd' 的文件格式和语法修正以及存在的用户 
-grpck 检查 '/etc/passwd' 的文件格式和语法修正以及存在的群组 
-newgrp group_name 登陆进一个新的群组以改变新创建文件的预设群组 
+|                指令              |                   说明                  |
+| -------------------------------- | --------------------------------------- |
+| useradd user1 | 创建一个新用户  |
+| userdel -r user1 | 删除一个用户，并删除该用户的主目录 |
+| usermod -a -G group1 user1 | 将一个用户添加到指定群组 |
+| groupadd group1 | 创建一个新用户组  |
+| groupdel group1 | 删除一个用户组  |
+| groupmod -n newGroup oldGroup | 重命名一个用户组  |
+| passwd | 修改口令  |
+| passwd user1 | 修改一个用户的口令 |
+
