--- a/_posts/linux/ubuntu/2011-07-04-ubuntu-06-cmd.md
+++ b/_posts/linux/ubuntu/2011-07-04-ubuntu-06-cmd.md
@@ -8,25 +8,24 @@ date: 2011-07-04 09:06
 ---
 
 
+|                指令              |                   说明                  |
+| -------------------------------- | --------------------------------------- |
+| gzip file1 | 压缩一个叫做 'file1'的文件  |
+| gzip -9 file1 | 最大程度压缩  |
+| rar a file1.rar test_file | 创建一个叫做 'file1.rar' 的包  |
+| rar a file1.rar file1 file2 dir1 | 同时压缩 'file1', 'file2' 以及目录 'dir1'  |
+| rar x file1.rar | 解压rar包  |
+| unrar x file1.rar | 解压rar包  |
+| tar -cvf archive.tar file1 | 创建一个非压缩的 tarball  |
+| tar -cvf archive.tar file1 file2 dir1 | 创建一个包含了 'file1', 'file2' 以及 'dir1'的档案文件  |
+| tar -tf archive.tar | 显示一个包中的内容  |
+| tar -xvf archive.tar | 释放一个包  |
+| tar -xvf archive.tar -C /tmp | 将压缩包释放到 /tmp目录下  |
+| tar -jcvf archive.tar.bz2 dir1 | 创建一个bzip2格式的压缩包  |
+| tar -jxvf archive.tar.bz2 | 解压一个bzip2格式的压缩包  |
+| tar -zcvf archive.tar.gz dir1 | 创建一个gzip格式的压缩包  |
+| tar -zxvf archive.tar.gz | 解压一个gzip格式的压缩包  |
+| zip file1.zip file1 | 创建一个zip格式的压缩包  |
+| zip -r file1.zip file1 file2 dir1 | 将几个文件和目录同时压缩成一个zip格式的压缩包  |
+| unzip file1.zip | 解压一个zip格式压缩包  |
 
-bunzip2 file1.bz2 解压一个叫做 'file1.bz2'的文件 
-bzip2 file1 压缩一个叫做 'file1' 的文件 
-gunzip file1.gz 解压一个叫做 'file1.gz'的文件 
-gzip file1 压缩一个叫做 'file1'的文件 
-gzip -9 file1 最大程度压缩 
-rar a file1.rar test_file 创建一个叫做 'file1.rar' 的包 
-rar a file1.rar file1 file2 dir1 同时压缩 'file1', 'file2' 以及目录 'dir1' 
-rar x file1.rar 解压rar包 
-unrar x file1.rar 解压rar包 
-tar -cvf archive.tar file1 创建一个非压缩的 tarball 
-tar -cvf archive.tar file1 file2 dir1 创建一个包含了 'file1', 'file2' 以及 'dir1'的档案文件 
-tar -tf archive.tar 显示一个包中的内容 
-tar -xvf archive.tar 释放一个包 
-tar -xvf archive.tar -C /tmp 将压缩包释放到 /tmp目录下 
-tar -cvfj archive.tar.bz2 dir1 创建一个bzip2格式的压缩包 
-tar -xvfj archive.tar.bz2 解压一个bzip2格式的压缩包 
-tar -cvfz archive.tar.gz dir1 创建一个gzip格式的压缩包 
-tar -xvfz archive.tar.gz 解压一个gzip格式的压缩包 
-zip file1.zip file1 创建一个zip格式的压缩包 
-zip -r file1.zip file1 file2 dir1 将几个文件和目录同时压缩成一个zip格式的压缩包 
-unzip file1.zip 解压一个zip格式压缩包 
