--- a/_posts/linux/ubuntu/2011-07-04-ubuntu-07-cmd.md
+++ b/_posts/linux/ubuntu/2011-07-04-ubuntu-07-cmd.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Linux学习基础篇03 ubuntu指令和技巧(七) 常用指令汇总"
+title: "Linux学习基础篇03 ubuntu指令和技巧(七) 挂载,卸载,重新分区和格式化"
 description: "linux ubuntu"
 category: linux
 tags: [linux]
@@ -8,43 +8,57 @@ date: 2011-07-04 09:07
 ---
 
 
-|   指令       |             说明                |
-| ------------ | ------------------------------- |
-|  bc | 简易计算器 |
-|  cal | 日历 |
-|  cd | 切换路径 |
-|  chmod | 修改文件/文件夹的属性 |
-|  chown | 修改文件/文件夹的拥有者 |
-|  cp | 拷贝 |
-|  date | 日期 |
-|  grep | 正则表示式查找 |
-|  history | 查看历史指令 |
-|  jar | 打包/解压jar包 |
-|  ls | 列出目录下的文件和文件夹 |
-|  scp | 远程拷贝 |
-|  ssh | 通过ssh协议登录到远程主机上 |
-|  mv | 重命名 |
-|  rm | 删除 |
-|  cat | 将文件的所有内容输出到终端 |
-|  head | 将文件头输出到终端 |
-|  tail | 将文件尾输出到终端 |
-|  tee | 读取标准输入的数据并将其内容输出成文件，同时将标准输入的数据输出到终端 |
-|  pwd | 查看当前路径 |
-|  blkid | 查看磁盘节点的UUID，Label和Type等信息 |
-|  df | 查看磁盘分区的使用情况 |
-|  du | 统计文件/文件夹的大小  |
-|  dd | 以二进制的方式拷贝文件，可以指定拷贝大小  |
-|  |  |
-|  ps | 查看进程信息 |
-|  top | 查看任务的CPU、内存等信息 |
-|  |  |
-|  uname -a | 查看系统信息 |
-|  cat /etc/issue | 查看OS信息 |
-|  cat /proc/meminfo | 查看内存信息 |
-|  cat /proc/cpuinfo | 查看CPU信息 |
-|  whoami | 查看当前登录用户 |
-|  groups skywang | 查看skywang用户群组信息 |
-|  |  |
-|  echo 0 > /proc/sys/kernel/printk | 关闭Kernel的log打印信息 |
+**(01) 查看已经挂载的磁盘**
 
+    $ mount
+
+说明：该指令会列出所有已经挂载到系统的分区。
+
+**(02) 手动挂载磁盘丰南区**
+
+    $ sudo mount /dev/sdb1 /media/tmp
+    或
+    $ sudo mount -t fat32 /dev/sdb1 /media/tmp
+    或
+    $ sudo mount -t ext4 /dev/sdb1 /media/tmp
+
+说明：上述指令是将节点/dev/sdb1挂载到路径/media/tmp上。
+
+**(03) 卸载已经挂载的分区**
+
+    $ sudo umount /dev/sdb1
+    或
+    $ sudo umount /media/tmp
+
+说明：该指令会卸载磁盘分区/dev/sdb1(它对应的挂载路径是/media/tmp)。
+
+**(04) 格式化磁盘分区**
+
+    $ sudo mkfs.vfat /dev/sdb1
+    或
+    $ sudo mkfs.ext4 /dev/sdb1
+
+说明：mkfs.vfat会将/dev/sdb1格式化为fat32格式，而mkfs.ext4则会将/dev/sdb1格式化为ext4格式。  
+注意：格式化磁盘分区之后，必须先通过umount卸载磁盘分区。
+
+
+**(05) 查看磁盘完整的分区信息**
+
+    $ sudo fdisk -l /dev/sda
+
+说明：该指令会列出/dev/sda磁盘下的所有子分区，无论该子分区挂载与否。
+
+
+**(06) 重新分区**
+
+    $ sudo fdisk /dev/sda
+
+说明：进入fdisk指令之后，可以通过相应的字母执行相应的动作。  
+d -- 删除分区  
+a -- 添加分区  
+w -- 保存对分区的修改  
+l -- 显示分区  
+t -- 修改分区类型  
+l -- 显示支持的分区类型  
+q -- 退出fdisk  
 
