--- a/_posts/linux/ubuntu/2011-07-04-ubuntu-03-cmd.md
+++ b/_posts/linux/ubuntu/2011-07-04-ubuntu-03-cmd.md
@@ -8,24 +8,32 @@ date: 2011-07-04 09:03
 ---
 
 
-查看文件内容 
-cat file1 从第一个字节开始正向查看文件的内容 
-tac file1 从最后一行开始反向查看一个文件的内容 
-more file1 查看一个长文件的内容 
-less file1 类似于 'more' 命令，但是它允许在文件中和正向操作一样的反向操作 
-head -2 file1 查看一个文件的前两行 
-tail -2 file1 查看一个文件的最后两行 
-tail -f /var/log/messages 实时查看被添加到一个文件中的内容 
+# 1. 查看文件内容 
+
+|                指令              |                   说明                  |
+| -------------------------------- | --------------------------------------- |
+|  cat file1 | 从第一个字节开始正向查看文件的内容 | 
+|  tac file1 | 从最后一行开始反向查看一个文件的内容 |
+|  more file1 | 查看一个长文件的内容 |
+|  less file1 | less指令类似于`more`指令，但是它允许在文件中和正向操作一样的反向操作 |
+|  head -2 file1 | 查看一个文件的前两行 |
+|  tail -2 file1 | 查看一个文件的最后两行 | 
+|  tail -f /var/log/messages | 实时查看被添加到一个文件中的内容 |
 
 
-文件搜索 
-find / -name file1 从 '/' 开始进入根文件系统搜索文件和目录 
-find / -user user1 搜索属于用户 'user1' 的文件和目录 
-find /home/user1 -name \*.bin 在目录 '/ home/user1' 中搜索带有'.bin' 结尾的文件 
-find /usr/bin -type f -atime +100 搜索在过去100天内未被使用过的执行文件 
-find /usr/bin -type f -mtime -10 搜索在10天内被创建或者修改过的文件 
-find / -name \*.rpm -exec chmod 755 '{}' \; 搜索以 '.rpm' 结尾的文件并定义其权限 
-find / -xdev -name \*.rpm 搜索以 '.rpm' 结尾的文件，忽略光驱、捷盘等可移动设备 
-locate \*.ps 寻找以 '.ps' 结尾的文件 - 先运行 'updatedb' 命令 
-whereis halt 显示一个二进制文件、源码或man的位置 
-which halt 显示一个二进制文件或可执行文件的完整路径 
+# 2.文件搜索 
+
+|                指令              |                   说明                  |
+| -------------------------------- | --------------------------------------- |
+| find . -name "*.txt" | 在当前目录和它的子目录中，查找.txt结尾的文件 |
+| find /home/skywang -name "java" -type d |  在/home/skywang和它的子目录中，查找名称为java的目录 |
+| find . -user skywang | 在当前目录和它的子目录中，查找属于用户skywang的文件和目录  |
+| find . -type f -atime +100 | 在当前目录和它的子目录中，查找在过去100天内未被使用过的文件  |
+| find . -type f -mtime -10 |  在当前目录和它的子目录中，查找在10天内被创建或者修改过的文件  |
+| find . -name \*.txt \| xargs rm | 在当前目录和它的子目录中，查找.txt结尾的文件并将找到的文件删除 |
+| find . -name \*.java \| xargs grep -n --color "hello" | 在当前目录和它的子目录中，查找.java结尾的文件，并在找到的文件的内容中查找是否包含hello字符串，是的话，则输出该文件名 |
+| locate ubuntu | 在系统中查找名称包含ubuntu的文件。先运行`updatedb`命令  |
+| whereis ifconfig | 查找一个指令的位置 |
+| which ifconfig | 显示一个二进制文件或可执行文件的完整路径  |
+
+
