Java transparent over.

--- a/_posts/2000-01-01-index.md
+++ b/_posts/2000-01-01-index.md
@@ -21,7 +21,7 @@ date: 2100-01-01 00:01
 # 1. Java
 
 1.1 Java基础文章  
-&nbsp;&nbsp;&nbsp;&nbsp; [Java 随机数][link_java_basic_01]  
+&nbsp;&nbsp;&nbsp;&nbsp; [Java 随机数][link_java_random]  
 
 
 1.2 Java集合系列文章  
@@ -148,7 +148,7 @@ date: 2100-01-01 00:01
 
 
 <!-- Java 链接 -->
-[link_java_basic_01]: /2012/03/01/basic-01-random
+[link_java_random]: /2012/03/01/random
 
 [link_java_collection_00]: /2012/02/01/collection-00-index
 [link_java_collection_01]: /2012/02/01/collection-01-summary
