--- a/_posts/java/others/2012-03-01-random.md
+++ b/_posts/java/others/2012-03-01-random.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Java 随机数"
-description: "java collection"
+description: "java"
 category: java
 tags: [java]
 date: 2012-03-01 09:01
