--- a/_drafts/2020-01-01-index.md
+++ b/_drafts/2020-01-01-index.md
@@ -43,11 +43,18 @@ date: 2100-01-01 00:02
 
 [(草稿)Java工程之Calculator][drafts_link_java_project_calculator01]  
 
-[Java 随机数][link_java_basic_01]  
+[Java 随机数][link_java_random]  
+[Java引用总结--StrongReference、SoftReference、WeakReference、PhantomReference][link_java_reference]  
+[Java Annotation认知(包括框架图、详细介绍、示例说明)][link_java_annotation]  
+[Java 反射机制(包括组成、结构、示例说明等内容)][link_java_reflection]  
 
 [Java 字符串系列01 String详解, String和CharSequence区别, StringBuilder和StringBuffer的区别][link_java_charsequence_01]  
 [Java 字符串系列02 StringBuilder详解][link_java_charsequence_02]  
 [Java 字符串系列03 StringBuffer详解][link_java_charsequence_03]  
+
+[Java异常(一) Java异常简介及其架构][link_java_exception01]  
+[Java异常(二) 《Effective Java》中关于异常处理的几条建议][link_java_exception02]  
+[Java异常(三) 《Java Puzzles》中关于异常的几个谜题][link_java_exception03]  
 
 [Java 时间相关内容的目录(Category)][link_java_time_00]  
 [Java 时间相关内容01 Calendar][link_java_time_01]  
@@ -108,6 +115,52 @@ date: 2100-01-01 00:02
 [java io系列24之 BufferedWriter详解][link_java_io_24]  
 [java io系列25之 PrintWriter详解][link_java_io_25]  
 [java io系列26之 RandomAccessFile详解][link_java_io_26]
+
+
+
+[Java多线程系列01--“基础篇”01之 基本概念][link_java_threads_basic01]  
+[Java多线程系列02--“基础篇”02之 常用的实现多线程的两种方式][link_java_threads_basic02]  
+[Java多线程系列03--“基础篇”03之 Thread中start()和run()的区别][link_java_threads_basic03]  
+[Java多线程系列04--“基础篇”04之 synchronized关键字][link_java_threads_basic04]  
+[Java多线程系列05--“基础篇”05之 线程等待与唤醒][link_java_threads_basic05]  
+[Java多线程系列06--“基础篇”06之 线程让步][link_java_threads_basic06]  
+[Java多线程系列07--“基础篇”07之 线程休眠][link_java_threads_basic07]  
+[Java多线程系列08--“基础篇”08之 join()][link_java_threads_basic08]  
+[Java多线程系列09--“基础篇”09之 interrupt()和线程终止方式][link_java_threads_basic09]  
+[Java多线程系列10--“基础篇”10之 线程优先级和守护线程][link_java_threads_basic10]  
+[Java多线程系列11--“基础篇”11之 生产消费者问题][link_java_threads_basic11]
+[Java多线程系列12--“JUC原子类”01之 框架][link_java_juc_atomic01]  
+[Java多线程系列13--“JUC原子类”02之 AtomicLong原子类][link_java_juc_atomic02]  
+[Java多线程系列14--“JUC原子类”03之 AtomicLongArray原子类][link_java_juc_atomic03]  
+[Java多线程系列15--“JUC原子类”04之 AtomicReference原子类][link_java_juc_atomic04]  
+[Java多线程系列16--“JUC原子类”05之 AtomicLongFieldUpdater原子类][link_java_juc_atomic05]
+[Java多线程系列17--“JUC锁”01之 框架][link_java_juc_lock01]  
+[Java多线程系列18--“JUC锁”02之 互斥锁ReentrantLock][link_java_juc_lock02]  
+[Java多线程系列19--“JUC锁”03之 公平锁(一)][link_java_juc_lock03]  
+[Java多线程系列20--“JUC锁”04之 公平锁(二)][link_java_juc_lock04]  
+[Java多线程系列21--“JUC锁”05之 非公平锁][link_java_juc_lock05]  
+[Java多线程系列22--“JUC锁”06之 Condition条件][link_java_juc_lock06]  
+[Java多线程系列23--“JUC锁”07之 LockSupport][link_java_juc_lock07]  
+[Java多线程系列24--“JUC锁”08之 共享锁和ReentrantReadWriteLock][link_java_juc_lock08]  
+[Java多线程系列25--“JUC锁”09之 CountDownLatch原理和示例][link_java_juc_lock09]  
+[Java多线程系列26--“JUC锁”10之 CyclicBarrier原理和示例][link_java_juc_lock10]  
+[Java多线程系列27--“JUC锁”11之 Semaphore信号量的原理和示例][link_java_juc_lock11]
+[Java多线程系列28--“JUC集合”01之 框架][link_java_juc_col01]  
+[Java多线程系列29--“JUC集合”02之 CopyOnWriteArrayList][link_java_juc_col02]  
+[Java多线程系列30--“JUC集合”03之 CopyOnWriteArraySet][link_java_juc_col03]  
+[Java多线程系列31--“JUC集合”04之 ConcurrentHashMap][link_java_juc_col04]  
+[Java多线程系列32--“JUC集合”05之 ConcurrentSkipListMap][link_java_juc_col05]  
+[Java多线程系列33--“JUC集合”06之 ConcurrentSkipListSet][link_java_juc_col06]  
+[Java多线程系列34--“JUC集合”07之 ArrayBlockingQueue][link_java_juc_col07]  
+[Java多线程系列35--“JUC集合”08之 LinkedBlockingQueue][link_java_juc_col08]  
+[Java多线程系列36--“JUC集合”09之 LinkedBlockingDeque][link_java_juc_col09]  
+[Java多线程系列37--“JUC集合”10之 ConcurrentHashMap][link_java_juc_col10]
+[Java多线程系列38--“JUC线程池”01之 线程池架构][link_java_juc_executor01]  
+[Java多线程系列39--“JUC线程池”02之 线程池原理(一)][link_java_juc_executor02]  
+[Java多线程系列40--“JUC线程池”03之 线程池原理(二)][link_java_juc_executor03]  
+[Java多线程系列41--“JUC线程池”04之 线程池原理(三)][link_java_juc_executor04]  
+[Java多线程系列42--“JUC线程池”05之 线程池原理(四)][link_java_juc_executor05]
+[Java多线程系列--“JUC线程池”06之 Callable和Future][link_java_juc_executor06]
 
 
 
@@ -186,7 +239,10 @@ date: 2100-01-01 00:02
 
 
 <!-- Java 链接 -->
-[link_java_basic_01]: /2012/03/01/basic-01-random
+[link_java_random]:     /2012/03/01/random
+[link_java_reference]:  /2012/03/02/reference 
+[link_java_annotation]: /2012/03/03/annotation
+[link_java_reflection]: /2012/03/04/reflection
 
 [link_java_collection_00]: /2012/02/01/collection-00-index
 [link_java_collection_01]: /2012/02/01/collection-01-summary
@@ -225,6 +281,10 @@ date: 2100-01-01 00:02
 [link_java_charsequence_02]: /2012/04/12/charsequence
 [link_java_charsequence_03]: /2012/04/13/charsequence
 
+[link_java_exception01]: /2012/04/14/exception
+[link_java_exception02]: /2012/04/15/exception
+[link_java_exception03]: /2012/04/16/exception
+
 [link_java_io_01]: /2012/05/01/io
 [link_java_io_02]: /2012/05/02/ByteArrayInputStream
 [link_java_io_03]: /2012/05/03/ByteArrayOutputStream
@@ -252,6 +312,50 @@ date: 2100-01-01 00:02
 [link_java_io_25]: /2012/05/25/PrintWriter
 [link_java_io_26]: /2012/05/26/RandomAccessFile
 
+
+[link_java_threads_basic01]: /2012/08/01/threads-basic
+[link_java_threads_basic02]: /2012/08/02/threads-basic
+[link_java_threads_basic03]: /2012/08/03/threads-basic
+[link_java_threads_basic04]: /2012/08/04/threads-basic
+[link_java_threads_basic05]: /2012/08/05/threads-basic
+[link_java_threads_basic06]: /2012/08/06/threads-basic
+[link_java_threads_basic07]: /2012/08/07/threads-basic
+[link_java_threads_basic08]: /2012/08/08/threads-basic
+[link_java_threads_basic09]: /2012/08/09/threads-basic
+[link_java_threads_basic10]: /2012/08/10/threads-basic
+[link_java_threads_basic11]: /2012/08/11/threads-basic
+[link_java_juc_atomic01]: /2012/08/12/juc-atomic01
+[link_java_juc_atomic02]: /2012/08/12/juc-atomic02
+[link_java_juc_atomic03]: /2012/08/12/juc-atomic03
+[link_java_juc_atomic04]: /2012/08/12/juc-atomic04
+[link_java_juc_atomic05]: /2012/08/12/juc-atomic05
+[link_java_juc_lock01]: /2012/08/13/juc-lock01
+[link_java_juc_lock02]: /2012/08/13/juc-lock02
+[link_java_juc_lock03]: /2012/08/13/juc-lock03
+[link_java_juc_lock04]: /2012/08/13/juc-lock04
+[link_java_juc_lock05]: /2012/08/13/juc-lock05
+[link_java_juc_lock06]: /2012/08/13/juc-lock06
+[link_java_juc_lock07]: /2012/08/13/juc-lock07
+[link_java_juc_lock08]: /2012/08/13/juc-lock08
+[link_java_juc_lock09]: /2012/08/13/juc-lock09
+[link_java_juc_lock10]: /2012/08/13/juc-lock10
+[link_java_juc_lock11]: /2012/08/13/juc-lock11
+[link_java_juc_col01]: /2012/08/14/juc-col01
+[link_java_juc_col02]: /2012/08/14/juc-col02
+[link_java_juc_col03]: /2012/08/14/juc-col03
+[link_java_juc_col04]: /2012/08/14/juc-col04
+[link_java_juc_col05]: /2012/08/14/juc-col05
+[link_java_juc_col06]: /2012/08/14/juc-col06
+[link_java_juc_col07]: /2012/08/14/juc-col07
+[link_java_juc_col08]: /2012/08/14/juc-col08
+[link_java_juc_col09]: /2012/08/14/juc-col09
+[link_java_juc_col10]: /2012/08/14/juc-col10
+[link_java_juc_executor01]: /2012/08/15/juc-executor01
+[link_java_juc_executor02]: /2012/08/15/juc-executor02
+[link_java_juc_executor03]: /2012/08/15/juc-executor03
+[link_java_juc_executor04]: /2012/08/15/juc-executor04
+[link_java_juc_executor05]: /2012/08/15/juc-executor05
+[link_java_juc_executor06]: /2012/08/15/juc-executor06
 
 
 
