Shell: transplant over.

--- a/_posts/linux/vim/2011-08-01-vim-01-basic.md
+++ b/_posts/linux/vim/2011-08-01-vim-01-basic.md
@@ -48,12 +48,15 @@ vim安装成功之后，即可通过下面的指令去编辑文件。
     $ vim [options] [file ..]
 
 **说明**：  
-> options -- 这项是编辑参数，可有可无。常用的有以下参数  
->> -b ： 以二进制的形式打开/编辑文件。  
->> -R ： 以只读的方式打开/编辑文件。  
->> -S ： 打开vim书签。  
+(01) options -- 这项是编辑参数，可有可无。常用的有以下参数  
 
-> file -- 这项是要编辑的文件名。vim支持同时编辑多个文件名：多个文件名时，请以空格分开。  
+|    参数      |       说明      |
+| ------------ | --------------- |
+| -b | 以二进制的形式打开/编辑文件 |
+| -R | 以只读的方式打开/编辑文件 |
+| -S | 打开vim书签 |
+
+(02) file -- 这项是要编辑的文件名。vim支持同时编辑多个文件名：多个文件名时，请以空格分开。  
 
 **示例：**  
 
