--- a/_posts/linux/vim/2011-08-01-vim-02-basic.md
+++ b/_posts/linux/vim/2011-08-01-vim-02-basic.md
@@ -9,7 +9,8 @@ date: 2011-08-01 10:01
 
 
 > vim包括许多模式，不同模式有不同的功能。  
-> &nbsp;&nbsp;&nbsp;&nbsp; 例如，“插入模式”让用户输入；“命令模式”>让用户执行保存/退出等等命令。  
+&nbsp;&nbsp;&nbsp;&nbsp; 例如，“插入模式”让用户输入；“命令模式”>让用户执行保存/退出等等命令。
+
 > 本文，我们主要介绍vim的3种最常用模式：**普通模式**，**插入模式**和**命令模式**。至于其他的模式，如Visual模式，替换模式等等；在后面用到的时候再详细介绍。
  
 
