--- a/_posts/linux/vim/2011-08-02-vim-01-setup.md
+++ b/_posts/linux/vim/2011-08-02-vim-01-setup.md
@@ -8,3 +8,14 @@ date: 2011-08-02 09:01
 ---
 
 
+vim的配置主要是通过~/.vimrc体现的。
+
+例如，在vim中若要显示行号，可以通过下面的指令来实现。
+
+    :set number
+
+若你想每次打开vim的时候，都默认显示行号。那么就可以通过配置~/.vimrc来实现。在~/.vimrc中添加以下内容即可！(若没有~/.vimrc，则新建该文件)
+
+    set number
+
+
