--- a/_posts/linux/vim/2011-08-02-vim-02-setup.md
+++ b/_posts/linux/vim/2011-08-02-vim-02-setup.md
@@ -7,8 +7,18 @@ tags: [linux]
 date: 2011-08-02 10:01
 ---
 
+# 1. Vim插件说明
 
-# 1. Vundle安装
+若想vim用的顺手或者想将vim打造成一个IDE。那么，vim配置和插件是两个不可或缺的部分。
+
+在git(一个版本控制工具)出来之前，vim插件都是在[http://www.vim.org/download.php](http://www.vim.org/download.php)中搜索想要的插件，然后下载；在安装插件安装说明放到~/.vim的相应位置。
+
+但是在git和github流行起来之后，vim插件开发者们普遍的都使用github来管理vim插件。这样，我们在github上就可以搜索出相应的插件。  
+更酷的是，通过Vundle这个工具，可以实现github上vim插件的傻瓜式安装！
+
+使用Vundle来进行安装vim插件，就是本文要介绍的重点。
+
+# 2. Vundle安装
 
 Vundle是vim插件的管理工具。有了它，我们能够非常容易的管理vim的插件。
 
@@ -21,7 +31,7 @@ Vundle安装步骤如下：
 
     $ git clone https://github.com/gmarik/Vundle.vim.git ~/.vim/bundle/Vundle.vim
 
-# 2. Vundle安装/卸载插件
+# 3. Vundle安装/卸载插件
 
 编辑~/.vimrc，并添加以下内容。(如果没有~/.vimrc，则新建该文件即可)
 
@@ -50,9 +60,11 @@ Vundle安装步骤如下：
 
 
 
-# 3. 配置示例
+# 4. 配置示例
 
 下面是我自己使用的vim配置文件内容。
+
+github上有许多vimer将自己的配置分享出来，感兴趣的话，可以到github上去搜索。
 
 
     """""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
