--- a/_posts/android/ui/widgets/2014-02-01-TextView.md
+++ b/_posts/android/ui/widgets/2014-02-01-TextView.md
@@ -7,7 +7,7 @@ tags: [android]
 date: 2014-02-01 09:01
 ---
 
-> 本文介绍Andrid中的TextView
+> 本文介绍TextView控件。下面的内容都是参考"[TextView测试代码](https://github.com/wangkuiwu/android_applets/tree/master/api_guide/ui/widgets/TextView/TextViewTest)"进行的讲解，感兴趣的可以进行测试验证。
 
 > **目录**  
 [1. TextView介绍](#anchor1)  
@@ -57,28 +57,23 @@ TextView是Android的文本显示器，主要用于文本显示。Android的Text
         <TextView
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:text="@string/text_01" />
+            android:text="begin" />
 
         <TextView
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:textColor="#00FF00"
             android:textSize="24sp"
-            android:text="@string/text_02" />
+            android:text="你好！" />
         
         <TextView
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:textColor="#FF00BBCC"
             android:textSize="32sp"
-            android:text="@string/text_02" />
+            android:text="end" />
         
     </LinearLayout>
 
- 
-
-运行效果：如下图
-
-![img](/media/pic/android/widgets/textview02.jpg)
  
 
