--- a/_drafts/2020-01-01-index.md
+++ b/_drafts/2020-01-01-index.md
@@ -14,7 +14,7 @@ date: 2100-01-01 00:02
 [第1部分 Linux](#anchor1)  
 [第2部分 Java](#anchor2)  
 [第3部分 数据结构和算法](#anchor3)  
-
+[第4部分 设计模式](#anchor4)  
 
 <a name="anchor1"></a>
 # 第1部分 Linux
@@ -37,6 +37,16 @@ date: 2100-01-01 00:02
 [Linux学习基础篇03 ubuntu指令和技巧(七) 挂载,卸载,重新分区和格式化][link_linux_ubuntu_cmd07]  
 [Linux学习基础篇03 ubuntu指令和技巧(八) Jar包][link_linux_ubuntu_cmd08]  
 
+
+[Linux bash总结(一) 基础部分][link_linux_bash01]  
+[Linux bash总结(二) 高级部分][link_linux_bash02]  
+[Linux bash总结(三) 实战][link_linux_bash03]
+
+[vim(编辑器之神)01基础篇(一) vim入门][link_vim_basic01]  
+[vim(编辑器之神)01基础篇(二) vim模式解析][link_vim_basic02]  
+[vim(编辑器之神)01基础篇(三) vim指令补充说明][link_vim_basic03]  
+[vim(编辑器之神)02配置篇(一) 基本配置][link_vim_setup01]  
+[vim(编辑器之神)02配置篇(二) 插件][link_vim_setup02]
 
 <a name="anchor2"></a>
 # 第2部分 Java
@@ -215,6 +225,22 @@ date: 2100-01-01 00:02
 
 
 
+<a name="anchor4"></a>
+# 第4部分 设计模式
+
+[UML系列01之 UML和绘图工具Visio介绍][link_uml01]  
+[UML系列02之 UML类图(一)][link_uml02]  
+[UML系列03之 UML类图(二)][link_uml03]  
+[UML系列04之 UML时序图][link_uml04]  
+[UML系列05之 基本流程图][link_uml05]
+
+
+
+
+
+
+
+
 <!-- Linux 链接 -->
 [link_linux_ubuntu01]: /2011/07/01/ubuntu-01-install
 [link_linux_ubuntu_cfg01]: /2011/07/02/ubuntu-01-setup
@@ -234,7 +260,15 @@ date: 2100-01-01 00:02
 [link_linux_ubuntu_cmd07]: /2011/07/04/ubuntu-07-cmd
 [link_linux_ubuntu_cmd08]: /2011/07/04/ubuntu-08-cmd
 
+[link_linux_bash01]:       /2011/09/01/shell
+[link_linux_bash02]:       /2011/09/02/shell
+[link_linux_bash03]:       /2011/09/03/shell
 
+[link_vim_basic01]:        /2011/08/01/vim-01-basic
+[link_vim_basic02]:        /2011/08/01/vim-02-basic
+[link_vim_basic03]:        /2011/08/01/vim-03-basic
+[link_vim_setup01]:        /2011/08/01/vim-01-setup
+[link_vim_setup02]:        /2011/08/01/vim-02-setup
 
 
 
@@ -443,6 +477,15 @@ date: 2100-01-01 00:02
 [link_algrithm_radix-sort]:   /2013/05/10/radix-sort
 
 
+
+
+
+<!-- 设计模式 -->
+[link_uml01]:   /2012/10/01/uml
+[link_uml02]:   /2012/10/02/uml
+[link_uml03]:   /2012/10/03/uml
+[link_uml04]:   /2012/10/04/uml
+[link_uml05]:   /2012/10/05/uml
 
 
 [drafts_link_java_project_calculator01]: /2012/12/01/java/projects/calculator/2012-12-01-calculator01
